[package]
name = "asteroids"
version = "2.0.0"
edition = "2021"
authors = ["Nova King <technobaboo@proton.me>"]
description = "Declarative UI for Stardust XR"
license = "MIT"
repository = "https://github.com/StardustXR/asteroids/"
homepage = "https://stardustxr.org"

[dependencies]
glam = { version = "0.28.0", features = ["mint"] }
mint = "0.5.9"
manifest-dir-macros = "0.1.17"
lazy_static = "1.4.0"
tokio = { version = "1.28.0", features = ["full"] }
input-event-codes = "6.2.0"
rustc-hash = "2.0.0"
serde = { version = "1.0.197", features = ["serde_derive"] }
derive_setters = "0.1.6"
tracing-subscriber = "0.3.18"

[dependencies.stardust-xr-fusion]
git = "https://github.com/StardustXR/core.git"
branch = "dev"

[dependencies.stardust-xr-molecules]
git = "https://github.com/StardustXR/molecules.git"
branch = "dev"

[dev-dependencies]
map-range = "0.1.2"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
