[package]
name = "asteroids"
version = "2.0.0"
edition = "2021"
authors = ["Nova King <technobaboo@proton.me>"]
description = "Declarative UI for Stardust XR"
license = "MIT"
repository = "https://github.com/StardustXR/asteroids/"
homepage = "https://stardustxr.org"

[dependencies]
tokio = { version = "1.28.0", features = ["macros"] }
mint = "0.5.9"
lazy_static = "1.4.0"
rustc-hash = "2.0.0"
serde = { version = "1.0.197", features = ["serde_derive"] }
derive_setters = "0.1.6"
derive-where = "1.2.7"
zbus = "5.1.1"

[dependencies.stardust-xr-fusion]
git = "https://github.com/StardustXR/core.git"
branch = "dev"

[dependencies.stardust-xr-molecules]
git = "https://github.com/StardustXR/molecules.git"
branch = "dev"

[dev-dependencies]
glam = { version = "0.28.0", features = ["mint"] }
map-range = "0.1.2"
tokio = { version = "1.28.0", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
xkbcommon = "0.8.0"
