[package]
name = "asteroids"
version = "2.0.0"
edition = "2024"
rust-version = "1.86"
authors = ["Nova King <technobaboo@proton.me>"]
description = "Declarative UI for Stardust XR"
license = "MIT"
repository = "https://github.com/StardustXR/asteroids/"
homepage = "https://stardustxr.org"

[features]
tracy = ["dep:tracy-client"]

[dependencies]
tokio = { version = "1.45.0", features = ["macros", "time", "sync"] }
mint = "0.5.9"
lazy_static = "1.4.0"
rustc-hash = "2.0.0"
serde = { version = "1.0.197", features = ["serde_derive"] }
derive_setters = "0.1.6"
derive-where = "1.2.7"
zbus = "5.1.1"
glam = { version = "0.30.0", features = ["mint"] }
directories = "6.0.0"
ron = "0.10.1"
map-range = "0.1.2"
inotify = "0.11.0"
futures-util = "0.3.31"
ashpd = "0.11.0"
tracing = "0.1.41"
dioxus-devtools = "0.7.0-alpha.1"
tracy-client = { version = "0.18.0", optional = true }
bumpalo = { version = "3.17.0", features = ["collections", "boxed"] }
ouroboros = "0.18.5"

[dependencies.stardust-xr-fusion]
git = "https://github.com/StardustXR/core.git"
branch = "dev"

[dependencies.stardust-xr-molecules]
git = "https://github.com/StardustXR/molecules.git"
branch = "dev"

[dev-dependencies]
tokio = { version = "1.45.0", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-tracy = "0.11.4"
xkbcommon = "0.8.0"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
